[package]
name = "dll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["psapi"] }
packets = { path = "../packets" }
minhook = { path = "../minhook" }
lazy_static = "1.4.0"
libflate = "1.1.2"
base64 = "0.13.0"